# rinit

./: .gitignore  Cargo.toml  README.md  TODO.md
.cargo/: config.toml
config/: default.target.toml  eth0.network.toml  fstab  getty.service.toml  hostname  network.target.toml  passwd  shadow  test.service.toml
crates/init-core/: Cargo.toml
crates/init-core/src/: cgroup.rs  child.rs  fs.rs  lib.rs  login.rs  net.rs  signal.rs  tty.rs  uevent.rs
crates/init-event/: Cargo.toml
crates/init-event/src/: lib.rs
crates/init-unit/: Cargo.toml
crates/init-unit/src/: deps.rs  lib.rs  parse.rs  types.rs
scripts/: aarch64-qemu.sh  build-static.sh  mkinitramfs.sh  qemu-run.sh
src/: bootstrap.rs  main.rs
