[package]
name = "init-core"
version.workspace = true
edition.workspace = true
description = "Kernel interface layer — syscall wrappers for PID 1"

[dependencies]
nix = { version = "0.29", features = ["process", "signal", "mount", "sched", "fs", "hostname", "user"] }
libc = "0.2"
anyhow = "1"
tracing = "0.1"
tokio = { version = "1", features = ["signal", "process", "io-util"] }
